--- a/index.Rmd
+++ b/index.Rmd
@@ -30,4 +30,6 @@ We welcome help and feedback at all levels! If you would like to contribute, ple
 
 To refer to this specific version, use this DOI: [10.5281/zenodo.1228032](https://doi.org/10.5281/zenodo.1228032).
 
+To refer to all versions, use this DOI: [10.5281/zenodo.1186169](https://doi.org/10.5281/zenodo.1186169).
+
 For the most up-to-date version of the guideline, visit [the online guideline page](https://transparentstats.github.io/guidelines/) or [source on Github](https://github.com/transparentstats/guidelines).
