--- a/guides/references.bib
+++ b/guides/references.bib
@@ -433,7 +433,7 @@
 	Number = {2},
 	Pages = {250--256},
 	Publisher = {Springer},
-	Title = {A picture is worth a thousandp values: On the irrelevance of hypothesis testing in the microcomputer age},
+	Title = {A picture is worth a thousand p values: On the irrelevance of hypothesis testing in the microcomputer age},
 	Url = {https://faculty.washington.edu/gloftus/Research/Publications/Manuscript.pdf/Loftus%20p-values%201993.pdf},
 	Volume = {25},
 	Year = {1993}}
@@ -502,7 +502,7 @@
 
 @book{APA2001,
 	Author = {{American Psychological Association}},
-	Edition = {5th Editio},
+	Edition = {5th Edition},
 	Isbn = {1557987904},
 	Pages = {400},
 	Title = {{Publication Manual of the American Psychological Association}},
