--- a/guides/principles.Rmd
+++ b/guides/principles.Rmd
@@ -2,13 +2,16 @@
 
 **Version:** 1.0 
 
-**DOI:** [10.5281/zenodo.1344317](https://doi.org/10.5281/zenodo.1344317)
-
 **Contributed to the writing:** Pierre Dragicevic, Chat Wacharamanotham, Matthew Kay
 
 **Gave feedback:** 
 
 **Endorsed:** 
+
+**DOI:** [10.5281/zenodo.1344317](https://doi.org/10.5281/zenodo.1344317)
+
+**Source:** [GitHub](https://github.com/transparentstats/guidelines/blob/master/guides/principles.Rmd)
+
 
 ## Introduction
 
