--- a/guides/references.bib
+++ b/guides/references.bib
@@ -517,3 +517,17 @@
 	Year = {2010},
 	Bdsk-Url-1 = {http://portal.acm.org/citation.cfm?doid=1753326.1753679},
 	Bdsk-Url-2 = {https://dx.doi.org/10.1145/1753326.1753679}}
+
+@article{Kampenes2007,
+title = "A systematic review of effect size in software engineering experiments",
+journal = "Information and Software Technology",
+volume = "49",
+number = "11",
+pages = "1073 - 1086",
+year = "2007",
+issn = "0950-5849",
+doi = "https://doi.org/10.1016/j.infsof.2007.02.015",
+url = "http://www.sciencedirect.com/science/article/pii/S0950584907000195",
+author = "Vigdis By Kampenes and Tore Dybå and Jo E. Hannay and Dag I.K. Sjøberg",
+keywords = "Empirical software engineering, Controlled experiments, Effect size, Statistical significance, Practical importance"
+}
