--- a/guides/principles.Rmd
+++ b/guides/principles.Rmd
@@ -1,4 +1,4 @@
-# Transparent Statistics Guiding Principles
+# Transparent Statistics Guiding Principles {#principles} 
 
 <a href="https://github.com/transparentstats/guidelines"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 
